--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <header class="Header">
     <div id="nav">
-      <img src="/images/1-2-2.jpg" alt="" />
+      <img src="images/1-2-2.jpg" alt="" />
 
       <div id="search-box">
         <span class="material-symbols-outlined" id="search">
