--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flipkart</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet"
@@ -21,7 +21,7 @@
 <body>
   <header class="Header">
     <div id="nav">
-      <img src="/images/1-2-2.jpg" alt="" />
+      <img src="images/1-2-2.jpg" alt="" />
 
       <div id="search-box">
         <span class="material-symbols-outlined" id="search">
@@ -48,95 +48,95 @@
     <div class="items">
 
       <div class="grocery Product-img">
-        <img src="/images/Grocery.webp">
+        <img src="images/Grocery.webp">
         <h4>Grocery</h4>
       </div>
 
       <div class="Mobiles Product-img">
-        <img src="/images/mobiles.webp">
+        <img src="images/mobiles.webp">
         <h4>Mobiles</h4>
       </div>
 
       <div class="Fashion Product-img">
-        <img src="/images/Fashion.webp">
+        <img src="images/Fashion.webp">
         <h4>Fashion</h4>
       </div>
 
       <div class="Electronics Product-img">
-        <img src="/images/Electronics.webp">
+        <img src="images/Electronics.webp">
         <h4>Electronics</h4>
       </div>
 
       <div class="Home-funitures Product-img">
-        <img src="/images/Home-funiture.webp">
+        <img src="images/Home-funiture.webp">
         <h4>Home & Funciture</h4>
       </div>
 
       <div class="Appliances Product-img">
-        <img src="/images/Appliances.webp">
+        <img src="images/Appliances.webp">
         <h4>Appliances</h4>
       </div>
 
       <div class="Travel Product-img">
-        <img src="/images/Travel.webp">
+        <img src="images/Travel.webp">
         <h4>Travel</h4>
       </div>
 
       <div class="Beauty-toys Product-img">
-        <img src="/images/Beauty-toys.webp">
+        <img src="images/Beauty-toys.webp">
         <h4>Beauty & toys</h4>
       </div>
 
       <div class="Motorbikes Product-img">
-        <img src="/images/Motorbikes.webp">
+        <img src="images/Motorbikes.webp">
         <h4>Motorbikes</h4>
       </div>
     </div>
 
     <div class="slide-show">
       <div class="wrapper">
-        <img src="/images/7fd0e4ab26429926.webp">
-        <img src="/images/d666db78034ac39f.webp">
-        <img src="/images/ed12b7707a04473c.webp">
-        <img src="/images/7fd0e4ab26429926.webp">
+        <img src="images/7fd0e4ab26429926.webp">
+        <img src="images/d666db78034ac39f.webp">
+        <img src="images/ed12b7707a04473c.webp">
+        <img src="images/7fd0e4ab26429926.webp">
       </div>
     </div>
 
     <h2>Best of Electronics</h2>
     <div class="container">
       <div>
-        <img src="/images/Electronics/-original-imag8z5weagzztda.webp">
+        <img src="images/Electronics/-original-imag8z5weagzztda.webp">
         <h5>Sony Camera</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
-        <img src="/images/Electronics/-original-imagwmfcundbqfgz.webp">
+        <img src="images/Electronics/-original-imagwmfcundbqfgz.webp">
         <h5>Asus Monitors</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Electronics/brother-dcp-b7535dw-original-imafwvkzwyjmqkfv.webp">
+        <img src="images/Electronics/brother-dcp-b7535dw-original-imafwvkzwyjmqkfv.webp">
         <h5>Printers</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Electronics/g24-20-full-hd-23-8-66cfgac1in-lenovo-original-imag7h74tqhfy6bm.webp">
+        <img src="images/Electronics/g24-20-full-hd-23-8-66cfgac1in-lenovo-original-imag7h74tqhfy6bm.webp">
         <h5>Lenovo</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
-        <img src="/images/Electronics/g24e-20-full-hd-24-2023-66d7gar1in-lenovo-original-imagq53zdnffu2pz.webp">
+        <img src="images/Electronics/g24e-20-full-hd-24-2023-66d7gar1in-lenovo-original-imagq53zdnffu2pz.webp">
         <h5>Monitors</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Electronics/tuf-gaming-vg289q1a-4k-ultra-hd-28-90lm05b0-b02110-asus-original-imagahbtxp8k8gtw.webp">
+          src="images/Electronics/tuf-gaming-vg289q1a-4k-ultra-hd-28-90lm05b0-b02110-asus-original-imagahbtxp8k8gtw.webp">
         <h5>Dell Monitor</h5>
         <h6>From $5000</h6>
       </div>
@@ -147,35 +147,35 @@
     <h2>Beauty,Food,Toys & more</h2>
     <div class="container">
       <div>
-        <img src="/images/Beauty Products/8901765126245-hauser-original-imafxkck3g75whwf.webp">
+        <img src="images/Beauty Products/8901765126245-hauser-original-imafxkck3g75whwf.webp">
         <h5>Sony Camera</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Beauty Products/adjustable-spring-hand-exerciser-finger-exerciser-hand-grip-original-imagg8phpmjazvgj.webp">
+          src="images/Beauty Products/adjustable-spring-hand-exerciser-finger-exerciser-hand-grip-original-imagg8phpmjazvgj.webp">
         <h5>Asus Monitors</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Beauty Products/bolt-cycles-for-men-with-front-suspension-dual-disc-brake-mtb-original-imagx8zzxx2rqh7d.webp">
+          src="images/Beauty Products/bolt-cycles-for-men-with-front-suspension-dual-disc-brake-mtb-original-imagx8zzxx2rqh7d.webp">
         <h5>Printers</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Beauty Products/remote-controlled-rock-crawler-rc-monster-truck-4-wheel-drive-1-original-imagx38fjmrp8vey.webp">
+          src="images/Beauty Products/remote-controlled-rock-crawler-rc-monster-truck-4-wheel-drive-1-original-imagx38fjmrp8vey.webp">
         <h5>Lenovo</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Beauty Products/rpm717-carbon-motorized-with-diet-plan-personal-trainer-doctor-original-imagg5zvhf8hpzvt.webp">
+          src="images/Beauty Products/rpm717-carbon-motorized-with-diet-plan-personal-trainer-doctor-original-imagg5zvhf8hpzvt.webp">
         <h5>Monitors</h5>
         <h6>From $5000</h6>
       </div>
@@ -185,32 +185,32 @@
     <h2>Home & Kitchen Essenstials</h2>
     <div class="container">
       <div>
-        <img src="/images/Home Appliances/-original-imaggjj6h52skhsz.webp">
+        <img src="images/Home Appliances/-original-imaggjj6h52skhsz.webp">
         <h5>Sony Camera</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
-        <img src="/images/Home Appliances/-original-imagshzadvzde9gg.webp">
+        <img src="images/Home Appliances/-original-imagshzadvzde9gg.webp">
         <h5>Asus Monitors</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Home Appliances/gold-01-classical-original-imafmbywhhurgf6b.webp">
+        <img src="images/Home Appliances/gold-01-classical-original-imafmbywhhurgf6b.webp">
         <h5>Printers</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Home Appliances/living-room-bedroom-gi-metal-self-adhesive-bathroom-shelf-with-original-imagwg59pyfvgvpk.webp">
+          src="images/Home Appliances/living-room-bedroom-gi-metal-self-adhesive-bathroom-shelf-with-original-imagwg59pyfvgvpk.webp">
         <h5>Lenovo</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
-        <img src="/images/Home Appliances/sborwc-ryme-original-imafz68tyh5kvryr.webp">
+        <img src="images/Home Appliances/sborwc-ryme-original-imafz68tyh5kvryr.webp">
         <h5>Monitors</h5>
         <h6>From $5000</h6>
       </div>
@@ -221,35 +221,35 @@
     <div class="container">
       <div>
         <img
-          src="/images/Groming/100-pencils-per-box-with-10-sharpners-round-shaped-pencil-original-imaghxkwam3zyzfs.webp">
+          src="images/Groming/100-pencils-per-box-with-10-sharpners-round-shaped-pencil-original-imaghxkwam3zyzfs.webp">
         <h5>Pencils</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Groming/4-feet-pink-very-beautiful-best-quality-for-special-gift-125-13-original-imafgv92puzkdytg.webp">
+          src="images/Groming/4-feet-pink-very-beautiful-best-quality-for-special-gift-125-13-original-imafgv92puzkdytg.webp">
         <h5>Doll</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Groming/7-naruto-itachi-uchiha-action-figure-21-cm-anime-for-car-original-imagmqwmkgfzczpx.webp">
+          src="images/Groming/7-naruto-itachi-uchiha-action-figure-21-cm-anime-for-car-original-imagmqwmkgfzczpx.webp">
         <h5>Action toys</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Groming/beast-26t-multispeed-7-speed-mountain-bike-with-fs-dd-brake-26-original-imaggxzzzymmt9ry.webp">
+          src="images/Groming/beast-26t-multispeed-7-speed-mountain-bike-with-fs-dd-brake-26-original-imaggxzzzymmt9ry.webp">
         <h5>Cycle</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
         <img
-          src="/images/Groming/strong-4-hp-peak-dc-motorized-foldable-manual-incline-2-60-original-imagxffczryhhhmq.webp">
+          src="images/Groming/strong-4-hp-peak-dc-motorized-foldable-manual-incline-2-60-original-imagxffczryhhhmq.webp">
         <h5>Treadmill</h5>
         <h6>From $5000</h6>
       </div>
@@ -259,25 +259,25 @@
     <h2>Home Appliances & Tv</h2>
     <div class="container">
       <div>
-        <img src="/images/Tv-appliances/-original-imagttjpuyzsbzud.webp">
+        <img src="images/Tv-appliances/-original-imagttjpuyzsbzud.webp">
         <h5>Samsung TV</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
-        <img src="/images/Tv-appliances/-original-imagtybwkyumhdrr.webp">
+        <img src="images/Tv-appliances/-original-imagtybwkyumhdrr.webp">
         <h5>Refridgerator</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Tv-appliances/-original-imagxbywsnhyfgyy.webp">
+        <img src="images/Tv-appliances/-original-imagxbywsnhyfgyy.webp">
         <h5>Washing Machine</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Tv-appliances/43csg7105-blaupunkt-original-imagq6affgfphkgq.webp">
+        <img src="images/Tv-appliances/43csg7105-blaupunkt-original-imagq6affgfphkgq.webp">
         <h5>BLAUPUNKT</h5>
         <h6>From $5000</h6>
       </div>
@@ -288,25 +288,25 @@
     <div class="container">
       <div>
         <img
-          src="/images/Winter-buys/1000-summer-cool-single-wall-stainless-steel-fridge-water-bottle-original-imaghvnzn5qa3qfs.webp">
+          src="images/Winter-buys/1000-summer-cool-single-wall-stainless-steel-fridge-water-bottle-original-imaghvnzn5qa3qfs.webp">
         <h5>Water bottles</h5>
         <h6>From $5000</h6>
       </div>
 
       <div>
-        <img src="/images/Winter-buys/free-boxho-hasti-fashion-unstitched-original-imagwrcwq4uuerfy.webp">
+        <img src="images/Winter-buys/free-boxho-hasti-fashion-unstitched-original-imagwrcwq4uuerfy.webp">
         <h5>Saries</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Winter-buys/medium-mat-red-2-pair02-proloom-original-imag7qphrzhhagvp.webp">
+        <img src="images/Winter-buys/medium-mat-red-2-pair02-proloom-original-imag7qphrzhhagvp.webp">
         <h5>Mat</h5>
         <h6>From $2000</h6>
       </div>
 
       <div>
-        <img src="/images/Winter-buys/red-new-morpankh-1-red-new-morpankh-flat-ganpati-original-imag966ge6uz3g5q.webp">
+        <img src="images/Winter-buys/red-new-morpankh-1-red-new-morpankh-flat-ganpati-original-imag966ge6uz3g5q.webp">
         <h5>BedSheet</h5>
         <h6>From $5000</h6>
       </div>
