--- a/Microsoft-clone/index.html
+++ b/Microsoft-clone/index.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="#">Supports</a>
           </li>
         </ul>
-        <!-- Your custom content -->
+        <!-- Login -->
         <div class="Login">
           <a href="#" class="custom-rounded child">All Microsoft</a>
           <div class="hamburger">
